syntax = "proto3";
package proto.debugger.v1;
option go_package = "github.com/ExocoreNetwork/price-feeder/debugger";

service PriceSubmitService {
  rpc SubmitPrice(SubmitPriceRequest) returns (SubmitPriceResponse);
}

message PriceMsg {
  string price = 1;
  string det_id = 2;
  int32 decimal = 3;
  string timestamp = 4;
  int32 nonce = 5;
  uint64 base_block = 6;
}

message SubmitPriceRequest{
  int64 height = 1;
  uint64 feeder_id = 2;
  PriceMsg price = 3;
}

message SubmitPriceResponse{
  bool check_tx_success = 1;
  bool deliver_tx_success = 2;
  string check_tx_log = 3;
  string deliver_tx_log = 4;
  int64 height = 5;
  string tx_hash = 6;
  string err = 7;
}
